# fitness-store

./: .deployment.env  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Procfile  README.md  add_env_vars.py  biome.json  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  docker-entrypoint.sh  heroku-release.sh  heroku.yml  justfile  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  setup.cfg  vitest.config.js
.claude/skills/verify/: SKILL.md
.github/workflows/: claude-code-review.yml  claude.yml  deploy.yml  django.yml  frontend.yml
app/: .coverage  Dockerfile  Dockerfile.prod  entrypoint.sh  manage.py  pytest.ini  requirements.txt
app/config/: requirements.in  requirements.txt  sitemaps.py  urls.py  wsgi.py
app/config/settings/: base.py  local.py  production.py  test.py
app/requirements/: base.txt  local.txt  production.txt
app/static/css/: base.css  timer.css
app/static/js/: payments.js  showForm.js  timer.js
app/store_project/: asgi.py  conftest.py  settings.py  urls.py  wsgi.py
app/store_project/admin_honeypot/: __init__.py  admin.py  apps.py  forms.py  listeners.py  models.py  signals.py  urls.py  views.py
app/store_project/analytics/: apps.py  context_processors.py
app/store_project/cardio/: apps.py  forms.py  urls.py  views.py
app/store_project/challenges/: admin.py  apps.py  filters.py  form_styling.py  forms.py  models.py  services.py  test_generate_summaries.py  tests.py  urls.py  views.py
app/store_project/exercises/: admin.py  apps.py  exercises.json  factories.py  models.py  seed_test_program_spreadsheet.py  sitemaps.py  urls.py  views.py
app/store_project/feed/: apps.py  urls.py  views.py
app/store_project/marketing/: admin.py  apps.py  models.py
app/store_project/meals/: admin.py  api.py  apps.py  forms.py  (+6 more)
caddy/: fitness-store.caddy
docs/: deploy-hetzner.md  design-system-phase-2-plan.md  design-system-phase-3-plan.md  design-system-unification-plan.md
docs/archive/: design-system-phase-2-plan.md  design-system-phase-3-plan.md  design-system-unification-plan.md
docs/demo/: README.md
docs/meso/: agent-account-and-cost-controls.md  agent-plan.md  agent-usage-plan.md  athlete-plan.md  billing-plan.md  chat-thread-plan.md  decisions.md  demo-onboarding-tour-plan.md  demo-walkthrough-video-plan.md  designer-framework-plan.md  first-time-ux-plan.md  fixed-selection-plan.md  groups-plan.md  invites-plan.md  nav-rename-coaching-to-meso-plan.md  one-rm-plan.md  parse-at-commit-plan.md  persistence-plan.md  public-sandbox-demo-plan.md  remove-current-week-plan.md  scheduling-plan.md  spreadsheet-parity-plan.md  tour-auto-advance-model.md  units-rpe-plan.md
frontend/: README.md  meso.test.js  meso_athlete.test.js  meso_delete.test.js  meso_deliver.test.js  meso_onboarding.test.js  meso_tour.test.js  meso_undo.test.js
frontend/designer/: CONTRACT.md  tsconfig.json  vite.config.ts  vitest-setup.ts
nginx/: nginx.conf
scripts/: backup.sh  capture_landing_still.py  publish_demo_video.py  record_demo.py  transfer_data_to_heroku.sh  upload_data_to_s3.sh
(+693 files in other folders)
