[project]
name = "fitness-store"
version = "0"
description = "A fitness store application"
authors = [{name = "Lance Goyke", email = "lance@lancegoyke.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Django>=5.2",
    "Pillow",
    "boto3",
    "dj-database-url",
    "django-allauth[socialaccount]",
    "django-cors-headers",
    "django-lifecycle",
    "django-clearcache",
    "django-embed-video",
    "django-markdownx",
    "django-ses[events]==4.1.1",
    "django-storages[s3]",
    "gunicorn",
    "hiredis",
    "Markdown",
    "psycopg[binary]>=3.2.9",
    "python-dotenv",
    "redis",
    "sentry-sdk",
    "scout-apm",
    "stripe",
    "whitenoise[brotli]",
    "django-taggit>=6.1.0",
    "django-filter>=25.1",
    "django-crispy-forms>=2.4",
    "crispy-bulma>=0.12.0",
    "google-genai>=1.26.0",
]

[dependency-groups]
dev = [
    "coverage",
    "django-browser-reload",
    "django-debug-toolbar",
    "django-upgrade",
    "factory_boy",
    "ipython",
    "ipdb",
    "pylint-django",
    "pytest",
    "pytest-sugar",
    "pytest-django",
    "ruff",
]

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [
    "app/store_project/admin_honeypot/tests/test_suite.py",
    "app/store_project/**/migrations/*.py",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
ignore = ["E203", "E501", "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"add_env_vars.py" = ["INP001"]
"manage.py" = ["INP001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
addopts = "--ds=config.settings.test --ignore=store_project/admin_honeypot/tests"
python_files = ["tests.py", "test_*.py"]

[tool.curlylint.rules]
image_alt = true
